// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepHeader > should render 1`] = `
<DocumentFragment>
  <div
    class="w-full sm:mt-8"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="inline-block mx-auto mb-2 font-semibold sm:hidden text-theme-secondary-text"
      >
        title
      </span>
      <ul
        class="flex flex-row gap-2"
      >
        <li
          class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-warning-300"
        />
        <li
          class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
        <li
          class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
        <li
          class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="flex hidden justify-between items-end mt-8 sm:block bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex gap-3 items-center"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="flex items-center text-sm leading-6 md:text-base md:leading-6 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render simple header without a provider 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between items-end bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="flex gap-3 items-center"
      >
        <h1
          class="mb-0 text-2xl leading-[29px]"
          data-testid="header__title"
        >
          title
        </h1>
      </div>
      <div
        class="flex items-center text-sm leading-6 md:text-base md:leading-6 text-theme-secondary-text"
        data-testid="header__subtitle"
      >
        subtitle
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StepHeader > should render with extra 1`] = `
<DocumentFragment>
  <div
    class="w-full sm:mt-8"
  >
    <div
      class="flex flex-col"
    >
      <span
        class="inline-block mx-auto mb-2 font-semibold sm:hidden text-theme-secondary-text"
      >
        title
      </span>
      <ul
        class="flex flex-row gap-2"
      >
        <li
          class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-warning-300"
        />
        <li
          class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
        <li
          class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
        <li
          class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
        />
      </ul>
    </div>
    <div
      class="flex flex-col justify-between sm:flex-row"
    >
      <div
        class="flex hidden justify-between items-end mt-8 sm:block bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex gap-3 items-center"
          >
            <h1
              class="mb-0 text-2xl leading-[29px]"
              data-testid="header__title"
            >
              title
            </h1>
          </div>
          <div
            class="flex items-center text-sm leading-6 md:text-base md:leading-6 text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            subtitle
          </div>
        </div>
      </div>
      <div
        class="mt-8 sm:mt-0"
      >
        extra
      </div>
    </div>
  </div>
</DocumentFragment>
`;
